Loads textures properly, breaks if you hover over hazmat suit, recipes and capabilities are broken
MANY json files aren't being generated