@@ -10,7 +10,10 @@ import net.minecraft.world.item.CreativeModeTab;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.block.Block;
-import net.minecraftforge.registries.RegistryObject;
+import net.neoforged.neoforge.common.Tags;
+import net.neoforged.neoforge.registries.DeferredBlock;
+import net.neoforged.neoforge.registries.DeferredHolder;
+import net.neoforged.neoforge.registries.DeferredItem;
 
 import java.util.*;
 
@@ -30,91 +33,87 @@ import static igentuman.nc.util.TagUtil.getBlocksByTagKey;
 import static igentuman.nc.util.TagUtil.getItemsByTagKey;
 
 public class CreativeTabs {
-    public static final RegistryObject<CreativeModeTab> FUSION_REACTOR_TAB = CREATIVE_TABS.register("fusion_reactor",
-            () ->  CreativeModeTab.builder()
-            .displayItems((displayParams, output) -> FUSION_BLOCKS.values().forEach(itemlike -> output.accept(new ItemStack(itemlike.get()))))
-            .icon(() -> new ItemStack(FUSION_BLOCKS.get("fusion_core").get()))
-            .title(Component.translatable("itemGroup.nuclearcraft_fusion_reactor"))
-            .build());
+    public static final DeferredHolder<CreativeModeTab, CreativeModeTab> FUSION_REACTOR_TAB = CREATIVE_TABS.register("fusion_reactor",
+            () -> CreativeModeTab.builder()
+                    .displayItems((displayParams, output) -> FUSION_BLOCKS.values().forEach(itemlike -> output.accept(new ItemStack(itemlike.get()))))
+                    .icon(() -> new ItemStack(FUSION_BLOCKS.get("fusion_core").get()))
+                    .title(Component.translatable("itemGroup.nuclearcraft_fusion_reactor"))
+                    .build());
 
-    public static final RegistryObject<CreativeModeTab> KUGELBLITZ_TAB = CREATIVE_TABS.register("kugelblitz",
-            () ->  CreativeModeTab.builder()
+    public static final DeferredHolder<CreativeModeTab, CreativeModeTab> KUGELBLITZ_TAB = CREATIVE_TABS.register("kugelblitz",
+            () -> CreativeModeTab.builder()
                     .displayItems((displayParams, output) -> KUGELBLITZ_BLOCKS.values().forEach(itemlike -> output.accept(new ItemStack(itemlike.get()))))
                     .icon(() -> new ItemStack(KUGELBLITZ_BLOCKS.get("chamber_terminal").get()))
                     .title(Component.translatable("itemGroup.nuclearcraft_kugelblitz"))
                     .build());
 
 
-    public static final RegistryObject<CreativeModeTab> NC_BLOCKS_TAB = CREATIVE_TABS.register("nc_blocks",
-            () ->  CreativeModeTab.builder()
-            .icon(() -> new ItemStack(getBlocksByTagKey("forge:storage_blocks/uranium").get(0)))
-            .displayItems((displayParams, output) -> getBlocks().forEach(output::accept))
-            .title(Component.translatable("itemGroup.nuclearcraft_blocks"))
-            .build());
+    public static final DeferredHolder<CreativeModeTab, CreativeModeTab> NC_BLOCKS_TAB = CREATIVE_TABS.register("nc_blocks",
+            () -> CreativeModeTab.builder()
+                    .icon(() -> new ItemStack(getBlocksByTagKey(Tags.Blocks.STORAGE_BLOCKS.location().withSuffix("/uranium")).getFirst()))
+                    .displayItems((displayParams, output) -> getBlocks().forEach(output::accept))
+                    .title(Component.translatable("itemGroup.nuclearcraft_blocks"))
+                    .build());
 
 
-
-    public static final RegistryObject<CreativeModeTab> NC_ITEMS_TAB = CREATIVE_TABS.register("nc_items",
-            () ->  CreativeModeTab.builder()
-                    .icon(() -> new ItemStack(getItemsByTagKey("forge:ingots/uranium").get(0)))
+    public static final DeferredHolder<CreativeModeTab, CreativeModeTab> NC_ITEMS_TAB = CREATIVE_TABS.register("nc_items",
+            () -> CreativeModeTab.builder()
+                    .icon(() -> new ItemStack(getItemsByTagKey(Tags.Items.INGOTS.location().withSuffix("/uranium")).getFirst()))
                     .displayItems((displayParams, output) -> getItems().forEach(output::accept))
                     .title(Component.translatable("itemGroup.nuclearcraft_items"))
                     .build()
     );
 
-    private static List<ItemStack> itemStacks(Collection<RegistryObject<Item>> map) {
+    private static List<ItemStack> itemStacks(Collection<DeferredItem<Item>> map) {
         List<ItemStack> stacks = new ArrayList<>();
-        for(RegistryObject<Item> item: map) {
+        for (DeferredItem<Item> item : map) {
             stacks.add(new ItemStack(item.get()));
         }
         return stacks;
     }
 
-    private static List<ItemStack> blockStacks(Collection<RegistryObject<Block>> map) {
+    private static List<ItemStack> blockStacks(Collection<DeferredBlock<Block>> map) {
         List<ItemStack> stacks = new ArrayList<>();
-        for(RegistryObject<Block> item: map) {
+        for (DeferredBlock<Block> item : map) {
             stacks.add(new ItemStack(item.get()));
         }
         return stacks;
     }
 
-    private static List<ItemStack> onlyEnabledItems(String type, HashMap<String, RegistryObject<Item>> items)
-    {
+    private static List<ItemStack> onlyEnabledItems(String type, HashMap<String, DeferredItem<Item>> items) {
         List<ItemStack> itemsList = new ArrayList<>();
         Set<String> enabled = Materials.registeredOf(type);
-        for(String name: items.keySet()) {
-            if(enabled.contains(name)) {
+        for (String name : items.keySet()) {
+            if (enabled.contains(name)) {
                 itemsList.add(new ItemStack(items.get(name).get()));
             }
         }
         return itemsList;
     }
 
-    private static List<ItemStack> onlyEnabledBlocks(HashMap<String, RegistryObject<Block>> block)
-    {
+    private static List<ItemStack> onlyEnabledBlocks(HashMap<String, DeferredBlock<Block>> block) {
         List<ItemStack> itemsList = new ArrayList<>();
         Set<String> enabled = Materials.registeredOf("block");
-        for(String name: block.keySet()) {
-            if(enabled.contains(name)) {
+        for (String name : block.keySet()) {
+            if (enabled.contains(name)) {
                 itemsList.add(new ItemStack(block.get(name).get()));
             }
         }
         return itemsList;
     }
 
-    private static List<ItemStack> getItems()
-    {
+    private static List<ItemStack> getItems() {
         List<ItemStack> items = itemStacks(NC_PARTS.values());
         items.addAll(itemStacks(NC_ITEMS.values()));
         items.addAll(itemStacks(NC_RECORDS.values()));
         items.addAll(itemStacks(NC_FOOD.values()));
         items.addAll(itemStacks(NC_SHIELDING.values()));
         items.addAll(onlyEnabledItems("ingot", NC_INGOTS));
-        items.addAll(onlyEnabledItems("chunk",NC_CHUNKS));
-        items.addAll(onlyEnabledItems("dust",NC_DUSTS));
-        items.addAll(onlyEnabledItems("gem",NC_GEMS));
-        items.addAll(onlyEnabledItems("nugget",NC_NUGGETS));
-        items.addAll(onlyEnabledItems("plate",NC_PLATES));
+        items.addAll(onlyEnabledItems("chunk", NC_CHUNKS));
+        items.addAll(onlyEnabledItems("dust", NC_DUSTS));
+        items.addAll(onlyEnabledItems("gem", NC_GEMS));
+        items.addAll(onlyEnabledItems("nugget", NC_NUGGETS));
+        items.addAll(onlyEnabledItems("plate", NC_PLATES));
         items.addAll(itemStacks(NC_ISOTOPES.values()));
         items.addAll(itemStacks(NC_FUEL.values()));
         items.addAll(itemStacks(NC_DEPLETED_FUEL.values()));
@@ -140,11 +139,10 @@ public class CreativeTabs {
         return items;
     }
 
-    private static List<ItemStack> getBlocks()
-    {
+    private static List<ItemStack> getBlocks() {
         List<ItemStack> items = new ArrayList<>();
-        for(String name: PROCESSORS.keySet()) {
-            if(Processors.registered().containsKey(name)) {
+        for (String name : PROCESSORS.keySet()) {
+            if (Processors.registered().containsKey(name)) {
                 items.add(new ItemStack(PROCESSORS.get(name).get()));
             } else {
                 NuclearCraft.LOGGER.info("Processor not registered: " + name);
@@ -154,43 +152,43 @@ public class CreativeTabs {
         items.add(new ItemStack(REDSTONE_DIMMER_ITEM_BLOCK.get()));
         items.addAll(blockStacks(NC_ELECTROMAGNETS.values()));
         items.addAll(blockStacks(NC_RF_AMPLIFIERS.values()));
-        for(RegistryObject<Block> block: ENERGY_BLOCKS.values()) {
-            if(block.get() instanceof SolarPanelBlock solarPanel) {
-                if(solarPanel.registered()) {
+        for (DeferredBlock<Block> block : ENERGY_BLOCKS.values()) {
+            if (block.get() instanceof SolarPanelBlock solarPanel) {
+                if (solarPanel.registered()) {
                     items.add(new ItemStack(solarPanel));
                 }
                 continue;
             }
-            if(block.get() instanceof RTGBlock rtgBlock) {
-                if(rtgBlock.registered()) {
+            if (block.get() instanceof RTGBlock rtgBlock) {
+                if (rtgBlock.registered()) {
                     items.add(new ItemStack(rtgBlock));
                 }
                 continue;
             }
-            if(block.get() instanceof BatteryBlock batteryBlock) {
-                if(batteryBlock.registered()) {
+            if (block.get() instanceof BatteryBlock batteryBlock) {
+                if (batteryBlock.registered()) {
                     items.add(new ItemStack(batteryBlock));
                 }
                 continue;
             }
             items.add(new ItemStack(block.get()));
         }
-        for(ItemStack ore: blockStacks(ORE_BLOCKS.values())) {
+        for (ItemStack ore : blockStacks(ORE_BLOCKS.values())) {
             String type = ore.getItem().toString().replaceAll("_ore|_deepslate_ore", "");
-            if(Ores.registered().containsKey(type)) {
+            if (Ores.registered().containsKey(type)) {
                 items.add(ore);
             }
         }
         items.addAll(onlyEnabledBlocks(NC_MATERIAL_BLOCKS));
-        for(RegistryObject<Block> block: STORAGE_BLOCKS.values()) {
-            if(block.get() instanceof ContainerBlock containerBlock) {
-                if(containerBlock.registered()) {
+        for (DeferredBlock<Block> block : STORAGE_BLOCKS.values()) {
+            if (block.get() instanceof ContainerBlock containerBlock) {
+                if (containerBlock.registered()) {
                     items.add(new ItemStack(containerBlock));
                 }
                 continue;
             }
-            if(block.get() instanceof BarrelBlock barrelBlock) {
-                if(barrelBlock.registered()) {
+            if (block.get() instanceof BarrelBlock barrelBlock) {
+                if (barrelBlock.registered()) {
                     items.add(new ItemStack(barrelBlock));
                 }
                 continue;
@@ -200,30 +198,30 @@ public class CreativeTabs {
         return items;
     }
 
-    public static final RegistryObject<CreativeModeTab> NC_PARTS_TAB = CREATIVE_TABS.register("nc_parts",
-            () ->  CreativeModeTab.builder()
-            .icon(() -> new ItemStack(NC_PARTS.get("actuator").get()))
-            .displayItems((displayParams, output) -> NC_PARTS.values().forEach(itemlike -> output.accept(new ItemStack(itemlike.get()))))
-            .title(Component.translatable("itemGroup.nuclearcraft_items"))
-            .build());
+    public static final DeferredHolder<CreativeModeTab, CreativeModeTab> NC_PARTS_TAB = CREATIVE_TABS.register("nc_parts",
+            () -> CreativeModeTab.builder()
+                    .icon(() -> new ItemStack(NC_PARTS.get("actuator").get()))
+                    .displayItems((displayParams, output) -> NC_PARTS.values().forEach(itemlike -> output.accept(new ItemStack(itemlike.get()))))
+                    .title(Component.translatable("itemGroup.nuclearcraft_items"))
+                    .build());
 
-    public static final RegistryObject<CreativeModeTab> FISSION_REACTOR_TAB = CREATIVE_TABS.register("fission_reactor",
+    public static final DeferredHolder<CreativeModeTab, CreativeModeTab> FISSION_REACTOR_TAB = CREATIVE_TABS.register("fission_reactor",
             () -> CreativeModeTab.builder()
                     .icon(() -> new ItemStack(FISSION_BLOCKS.get("fission_reactor_controller").get()))
                     .displayItems((displayParams, output) -> FISSION_BLOCKS.values().forEach(itemlike -> output.accept(new ItemStack(itemlike.get()))))
                     .title(Component.translatable("itemGroup.nuclearcraft_fission_reactor"))
                     .build());
 
-    public static final RegistryObject<CreativeModeTab> TURBINE_TAB = CREATIVE_TABS.register("turbine",
+    public static final DeferredHolder<CreativeModeTab, CreativeModeTab> TURBINE_TAB = CREATIVE_TABS.register("turbine",
             () -> CreativeModeTab.builder()
                     .icon(() -> new ItemStack(TURBINE_BLOCKS.get("turbine_controller").get()))
                     .displayItems((displayParams, output) -> TURBINE_BLOCKS.values().forEach(itemlike -> output.accept(new ItemStack(itemlike.get()))))
                     .title(Component.translatable("itemGroup.nuclearcraft_turbine"))
                     .build());
 
-    public static final RegistryObject<CreativeModeTab> NC_FLUIDS = CREATIVE_TABS.register("nc_fluids",
+    public static final DeferredHolder<CreativeModeTab, CreativeModeTab> NC_FLUIDS = CREATIVE_TABS.register("nc_fluids",
             () -> CreativeModeTab.builder()
-                    .icon(() -> new ItemStack(ALL_BUCKETS.get(0).get()))
+                    .icon(() -> new ItemStack(ALL_BUCKETS.getFirst().get()))
                     .displayItems((displayParams, output) -> ALL_BUCKETS.forEach(itemlike -> output.accept(new ItemStack(itemlike.get()))))
                     .title(Component.translatable("itemGroup.nuclearcraft_fluids"))
                     .build());
